[metadata]
name = canisterpy
version = 1.0.0
author = ja1dan
author_email = ajaidan0@gmail.com
description = A simple, easy-to-use API wrapper for https://canister.me.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cnstr/canister.py
project_urls =
    Bug Tracker = https://github.com/cnstr/canister.py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    aiohttp

[options.packages.find]
where = src