[metadata]
name = canisterpy
version = 1.0.0
author = Canister
author_email = support@canister.me
description = A simple, easy-to-use API wrapper for https://canister.me.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cnstr/canister.py
project_urls =
    Bug Tracker = https://github.com/cnstr/canister.py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    aiocache
    aiohttp
    ujson
    msgpack

[options.packages.find]
where = src
